--- a/index.html
+++ b/index.html
@@ -45,6 +45,136 @@
       <a href="#" class="sub-link">Terms apply</a>
     </div>
   </section>
+
+  <section class="categories">
+    <h4>Included in All Plans</h4>
+    <div class="text-xl">All The TV You Love</div>
+    <div class="sub-text">Stream full seasons of exclusive series, current-season episodes, hit movies, Hulu Originals,
+      kids shows, and more.</div>
+
+    <div class="covers">
+      <div class="cover-1">
+        <div class="cover-grad"></div>
+        <div class="cover-text">
+          <div class="sub-title">Past & Curent Seasons</div>
+          <h3>TV Shows</h3>
+        </div>
+      </div>
+
+      <div class="cover-2">
+        <div class="cover-grad"></div>
+        <div class="cover-text">
+          <div class="sub-title">New & Classics</div>
+          <h3>Movies</h3>
+        </div>
+      </div>
+
+      <div class="cover-3">
+        <div class="cover-grad"></div>
+        <div class="cover-text">
+          <div class="sub-title">Groundbreaking</div>
+          <h3>Hulu Originals</h3>
+        </div>
+      </div>
+
+      <div class="cover-4">
+        <div class="cover-grad"></div>
+        <div class="cover-text">
+          <div class="sub-title">Add-on</div>
+          <h3>Premiums</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="live">
+  <div class="live-border">
+    <h4>Hulu + Live TV</h4>
+    <div class="text-xl">Live TV Makes It Better</div>
+    <div class="sub-text">Make the switch from cable. Get 75+ top channels with your favorite live sports, news, and events - plus the entire Hulu streaming library.</div>
+    <div class="legal-text">Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details</div>
+    <a href="#">View Channels In Your Area</a>
+
+  </div>
+  </section>
+
+  <section class="live-sports">
+  <div class="live-sports-content">
+    <div class="text-xl">Live Sports</div>
+    <div class="sub-text">Catch your games at home or on the go. Stream live games from major college and pro leagues including the NCAA®, NBA, NHL, NFL, and more.</div>
+  <div class="live-sports-logos">
+    <div>
+      <img src="img/live-sports-logo-1.png" alt="CBS Sports network logo in dark blue letters with a white background surrounded by a dark blue border">
+    </div>
+      <div>
+      <img src="img/live-sports-logo-2.png" alt="ESPN logo in red letters with white background">
+    </div>
+      <div>
+      <img src="img/live-sports-logo-3.svg" alt="NBC Sports Network Logo with a rainbow colored peacock and black letters on a white background">
+    </div>
+      <div>
+      <img src="img/live-sports-logo-4.png" alt="NBC Golf channel logo with a rainbow colored peacock and golf in gradient grey letters on a white background">
+    </div>
+    </div>
+
+    <div class="legal-text">Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details</div>
+
+  </div>
+  </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-lists">
+      <ul>
+        <li class="list-head">BROWSE</li>
+        <li><a href="#">Streaming Library</a></li>
+        <li><a href="#">Live TV</a></li>
+        <li><a href="#">Live News</a></li>
+        <li><a href="#">Live Sports</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">TV Shows</a></li>
+        <li><a href="#">Movies</a></li>
+        <li><a href="#">Originals</a></li>
+        <li><a href="#">Networks</a></li>
+        <li><a href="#">Kids</a></li>
+        <li><a href="#">FX on Hulu</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Hulu, Disney+, and ESPN+</a></li>
+        <li><a href="#">Disney Bundle</a></li>
+        <li><a href="#">HBO Max</a></li>
+        <li><a href="#">Cinimax</a></li>
+        <li><a href="#">Showtime</a></li>
+        <li><a href="#">STARZ</a></li>
+      </ul>
+      <ul>
+        <li class="list-head">HELP</li>
+        <li><a href="#">Account & Billing</a></li>
+        <li><a href="#">Plans & Pricing</a></li>
+        <li><a href="#">Supported Devices</a></li>
+        <li><a href="#">Accesibility</a></li>
+      </ul>
+      <ul>
+        <li class="list-head">ABOUT US</li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      </div>
+      <div class="divider"></div>
+
+      <div class="social-icons">
+      <a href="#"><img src="img/facebook.svg" alt="" /></a>
+          <a href="#"><img src="img/twitter.svg" alt="" /></a>
+          <a href="#"><img src="img/youtube.svg" alt="" /></a>
+          <a href="#"><img src="img/instagram.svg" alt="" /></a>
+      
+      </div>
+    </div>
+  </footer>
+
   <script src="js/main.js"></script>
 </body>
 
